[package]
name = "domains"
version = "0.1.0"
authors = ["asteryx <asteryx82@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.2"
actix-files = "0.1.3"
diesel = { version = "1.4.2", features = ["sqlite", "postgres","chrono","serde_json", "r2d2"] }
dotenv = "0.14.1"
futures = "0.1.25"
listenfd = "0.3"
tera = "0.11"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
json = "*"
num_cpus = "1.10.1"
toml = "0.5.3"

[profile.dev]
debug = true  # Добавляет флаг `-g` для компилятора;
opt-level = 0 # Отключаем оптимизацию кода;