[package]
name = "domains"
version = "0.1.0"
authors = ["asteryx <asteryx82@gmail.com>"]
edition = "2018"

[dependencies]
actix = "^0.9.0"
actix-web = "^2.0.0"
actix-rt = "^1.0.0"
actix-files = "^0.2.1"
actix-identity = "0.2.1"
actix-service = "1.0.5"
chrono = { version = "0.4.10", features = ["serde"]}
diesel = { version = "1.4.2", features = ["sqlite", "postgres", "chrono", "serde_json", "r2d2"] }
dotenv = "0.14.1"
futures = "0.3.1"
listenfd = "0.3"
tera = "0.11"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
json = "*"
num_cpus = "1.10.1"
toml = "0.5.3"
log = "0.4.8"
env_logger = "0.6.1"
pbkdf2 = "0.3.0"
base64 = "0.10.1"
hmac = "0.7.1"
sha2 = "0.8.0"
rand = "0.7.2"
byteorder = "1.3.2"
subtle = "2.2.1"
regex = "1.3.1"
signal-hook = "0.1.11"
reqwest = { version = "0.10.1", features = ["blocking"] }
jsonwebtoken = "^7.0.1"
urldecode = "0.1.1"


[profile.dev]
debug = true  # Добавляет флаг `-g` для компилятора;
opt-level = 0 # Отключаем оптимизацию кода;